<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name" translatable="false">ProFitMap</string>

    <string-array name="sports_array" translatable="false">
        <item>@string/running</item>
        <item>@string/biking</item>
        <item>@string/skiing</item>
        <item>@string/kayaking</item>
        <item>@string/hiking</item>
    </string-array>
    <string-array name="tiles_array" translatable="false">
        <item>@string/track_length</item>
        <item>@string/track_duration</item>
        <item>@string/track_ascent</item>
        <item>@string/track_descent</item>
        <item>@string/track_average_speed</item>
        <item>@string/track_end_time</item>
        <item>@string/track_start_time</item>
        <item>@string/track_max_speed</item>
        <item>@string/track_number_of_pauses</item>
        <item>@string/track_total_pause_time</item>
        <item>@string/rating</item>
        <item>@string/track_km_effort</item>
        <item>@string/track_current_speed</item>
        <item>@string/track_ghost_distance</item>
    </string-array>

    <string name="running">Running</string>
    <string name="biking">Biking</string>
    <string name="skiing">Skiing</string>
    <string name="kayaking">Kayaking</string>
    <string name="hiking">Hiking</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="sports_images" translatable="false">
        <item>running</item>
        <item>biking</item>
        <item>ski</item>
        <item>kayak</item>
        <item>hiking</item>
    </string-array>

    <string name="action_settings">Settings</string>

    <string-array name="sort_modes">
        <item>Name</item>
        <item>Date</item>
        <item>Distance</item>
    </string-array>

    <string name="takepic">Take a picture</string>
    <string name="summary_section">Summary</string>
    <string name="map_section">Map</string>
    <string name="graph_section">Graphs</string>
    <string name="title_activity_live_training">Training</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="unlink_dropbox">Unlink Dropbox</string>
    <string name="dropbox_connected">Your Dropbox account has been successfully linked!</string>
    <string name="dropbox_error">Error while linking Dropbox</string>
    <string name="start_training">Start training</string>
    <string name="title_activity_end_training">Save training</string>
    <string name="save_activity">Save training</string>
    <string name="dismiss_training">Dismiss training</string>
    <string name="dismiss_training_message">You are about to delete the training currently shown. Are you sure you want to do that?</string>
    <string name="title_activity_track_detail">Training details</string>
    <string name="title_activity_stats_order">Order sports</string>
    <string name="rating">Rating</string>
    <string name="track_length">Distance</string>
    <string name="track_duration">Duration</string>
    <string name="track_ascent">Ascent</string>
    <string name="track_descent">Descent</string>
    <string name="track_start_time">Start time</string>
    <string name="track_end_time">End time</string>
    <string name="track_average_speed">Average speed</string>
    <string name="track_max_speed">Max speed</string>
    <string name="track_total_pause_time">Total pause time</string>
    <string name="track_number_of_pauses">Number of pauses</string>
    <string name="track_km_effort">Effort Kilometers</string>
    <string name="track_ghost_distance">Distance to ghost</string>
    <string name="start_ghost">Start a ghost</string>
    <string name="track_not_ready">This track has not yet been downloaded from the cloud. Please try later</string>
    <string name="title_activity_nfcimport">Import track</string>
    <string name="track_current_speed">Current speed</string>
    <string name="altitude_graph_title">Altimetric profile</string>
    <string name="speed_graph_title">Speed</string>
    <string name="waiting_dropbox">Waiting for Dropbox…</string>
    <string name="not_enough_points">You cannot save a track with no waypoints!</string>
    <string name="title_activity_dropbox_photo_viewer">Photo viewer</string>
	<string name="ahead">Ahead by</string>
	<string name="behind">Behind by</string>
</resources>
